# universal_file_previewer

./: .gitignore  .pubignore  CHANGELOG.md  README.md  analysis_output.txt  analysis_output_2.txt  pubspec.yaml  test_output.txt  universal_file_previewer_docs.docx  widget_test_output_2.txt  widget_test_output_3.txt
.dart_tool/: package_config.json  package_graph.json
.dart_tool/extension_discovery/: vs_code.json
android/src/main/kotlin/com/example/universal_file_previewer/: FilePreviewerPlugin.kt
example/: .flutter-plugins-dependencies
example/lib/: main.dart
ios/: universal_file_previewer.podspec
lib/src/core/: file_detector.dart
lib/src/parsers/: markdown_parser.dart  zip_parser.dart
lib/src/platform/: platform_channel.dart
lib/src/renderers/: fallback_renderer.dart  media_renderers.dart  pdf_renderer.dart  text_renderers.dart  zip_renderer.dart
lib/src/widgets/: file_preview_page.dart  file_preview_widget.dart  native_video_player.dart
real_samples/: sample.dart  sample.txt
scratch/: check_pdf_format.dart  download_final.dart  download_missing.dart  download_real_samples.dart  test_detector.dart
test/: final_real_file_check_test.dart  real_file_check_test.dart  remaining_real_file_check_test.dart  widget_renderer_test.dart
web/: universal_file_previewer_web.dart
windows/: CMakeLists.txt  universal_file_previewer_plugin.cpp
